[tool.poetry]
name = "ethena-init-notify"
version = "0.1.0"
description = ""
authors = ["kalindro <25466220+Kalindro@users.noreply.github.com.>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"
selenium-stealth = "^1.0.6"
fake-useragent = "^1.5.1"
schedule = "^1.2.1"
kalindro-custom-loguru-logger = {git = "https://github.com/Kalindro/kalindro-custom-loguru-logger.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
